--- a/res/layout/activity_text_detect.xml
+++ b/res/layout/activity_text_detect.xml
@@ -1,60 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    <TextView
-        android:layout_x="40dip"
-        android:layout_y="30dip"
-        android:id="@+id/textBallot"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="抽签" />
-<Button 
-        android:layout_x="95dip"
-        android:layout_y="90dip"
-        android:id="@+id/BnAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="添加"/>
-<Button 
-        android:layout_x="95dip"
-        android:layout_y="90dip"
-        android:id="@+id/BnChoose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="选取"/>
-<TextView 
-        android:layout_x="40dip"
-        android:layout_y="150dip"
-        android:id="@+id/EditBallot"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
-<Button 
-        android:layout_x="50dip"
-        android:layout_y="220dip"
-        android:id="@+id/BnStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start"/>
-<Button 
-        android:layout_x="210dip"
-        android:layout_y="220dip"
-        android:id="@+id/BnStop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Stop"
-        android:layout_below="@id/EditBallot"/>
-    <TextView
-        android:layout_x="40dip"
-        android:layout_y="30dip"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="选择人数" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/Content_Layout"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#fff"
+    android:gravity="center" >
 
-    <NumberPicker
-        android:id="@+id/numberPick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:id="@+id/title_bar"
+        style="@style/TitleBar"
+        android:layout_alignParentTop="true" >
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/btnDrawer"
+            style="@style/TitleBarLeftIcon_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp" />
+
+        <TextView
+            android:id="@+id/bar_title"
+            style="@style/Title"
+            android:layout_marginRight="10dp"
+            android:text="简易抽签"
+            android:textColor="#fe448a" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:layout_marginTop="59dp"
+        android:singleLine="true" >
+
+        <EditText
+            android:id="@+id/text"
+            style="@style/EditEnter"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:ems="10" />
+
+        <GridView
+            android:id="@+id/gridView1"
+            android:layout_width="fill_parent"
+            android:layout_height="200dp"
+            android:layout_margin="10dp"
+            android:background="#EFDFDF"
+            android:columnWidth="90dp"
+            android:gravity="center"
+            android:horizontalSpacing="5dp"
+            android:numColumns="4"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="5dp" >
+        </GridView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="请选择需要抽出的个数" />
+
+            <EditText
+                android:id="@+id/editText1"
+                style="@style/EditEnter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10" >
+
+                <requestFocus />
+            </EditText>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="请输入主题" />
+
+            <EditText
+                android:id="@+id/editText2"
+                style="@style/EditEnter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10" >
+
+                <requestFocus />
+            </EditText>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="本次抽选结果：" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="李德才" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="开始抽签" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="清空" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
