--- a/res/layout/activity_rollturn.xml
+++ b/res/layout/activity_rollturn.xml
@@ -7,11 +7,12 @@
     <GridView
             android:id="@+id/gridview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:horizontalSpacing="3dp"
+            android:layout_height="wrap_content"
+            android:horizontalSpacing="10dp"
+            android:verticalSpacing="10dp"
             android:numColumns="3"
             android:scrollbars="none"
-            android:verticalSpacing="5dp" >
+             >
         </GridView> 
        
    
