--- a/res/layout/cell.xml
+++ b/res/layout/cell.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
     
      <ImageView android:id="@+id/imgView"
-         		android:layout_width="200dp"
-         		android:layout_height="200dp"
-         		android:layout_gravity="center_horizontal"/>
+         		android:layout_width="130dp"
+                android:layout_height="156dp"
+         		android:scaleType="centerCrop"/>
 </LinearLayout>
