modify roll layout

--- a/res/layout/activity_roll.xml
+++ b/res/layout/activity_roll.xml
@@ -1,6 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="#fff"
     >
+            <RelativeLayout
+	        style="@style/TitleBar"
+	        android:id="@+id/title_bar"
+	        android:layout_alignParentTop="true">
+	        <ImageView
+	            android:id="@+id/btnDrawer"
+	            style="@style/TitleBarLeftIcon_back"
+	            android:layout_height="wrap_content"
+	            android:layout_width="wrap_content"
+	            android:padding="10dp"
+	            />
+	        <TextView
+	            android:id="@+id/bar_title"
+	            style="@style/Title"
+	            android:text="翻牌子"
+	            android:layout_marginRight="10dp"
+	            android:textColor="#fe448a"
+	            />
+	    </RelativeLayout>
 
 <RelativeLayout
     
@@ -20,22 +40,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal" >
 
-        <Button
+        <ImageView
             android:id="@+id/btnpick"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
             android:onClick="onClick"
+            android:src="@drawable/camera4"
             android:text="选择图片" />
 
-        <Button
+        <ImageView
             android:id="@+id/btnnext"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_weight="1"
             android:onClick="onClick"
+            android:src="@drawable/arrow2"
             android:text="翻牌子!" />
     </LinearLayout>
 
