--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="true"
-                android:src="@drawable/two" />
+                android:src="@drawable/two2" />
         </LinearLayout>
 
         <LinearLayout
