--- a/res/layout/activity_text_detect.xml
+++ b/res/layout/activity_text_detect.xml
@@ -60,35 +60,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_below="@+id/gridview1"
-            android:layout_marginTop="200dp" >
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="bottom"
-                android:singleLine="true"
-                android:text="请选择需要抽出的个数:" />
-
-            <EditText
-                android:id="@+id/editText1"
-                style="@style/EditEnter"
-                android:layout_width="60dp"
-                android:layout_marginLeft="10dp"
-                android:gravity="bottom"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:layout_toRightOf="@id/textView1"
-                android:textColor="#fe448a" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="90dp"
             android:gravity="center_horizontal"
-            android:layout_marginTop="350dp" >
+            android:layout_marginTop="380dp" >
 
             <ImageView
                 android:id="@+id/button1"
@@ -100,11 +74,41 @@
             <ImageView
                 android:id="@+id/button2"
                 android:layout_toRightOf="@id/button1"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:src="@drawable/clean" />
 
         </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/gridView1"
+            android:layout_below="@+id/gridView1"
+            android:layout_marginTop="43dp" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:textSize="18dp"
+                android:text="请选择需要抽出的个数:" />
+
+            <EditText
+                android:id="@+id/editText1"
+                style="@style/EditEnter"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/textView1"
+                android:inputType="number"
+                android:textColor="#fe448a" >
+
+                <requestFocus />
+            </EditText>
+        </RelativeLayout>
+
     </RelativeLayout>
 
 </RelativeLayout>
