--- a/res/layout/activity_photo_detect.xml
+++ b/res/layout/activity_photo_detect.xml
@@ -26,26 +26,26 @@
 	    </RelativeLayout>
 
 
-    <RelativeLayout
+   <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="wrap_content"
         android:layout_height="320dp" 
         android:layout_marginTop="59dp"
+        android:layout_centerInParent="true"
         android:layout_alignParentTop="true">
 
         <ImageView
             android:id="@+id/imageview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_launcher" />
+            android:layout_height="match_parent"/>
 
         <ImageView
             android:id="@+id/image2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/test_people" />
+            android:layout_alignParentTop="true"/>
+        
 
     </RelativeLayout>
 
