--- a/res/layout/activity_text_detect.xml
+++ b/res/layout/activity_text_detect.xml
@@ -35,11 +35,10 @@
         <EditText
             android:id="@+id/text"
             style="@style/EditEnter"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="点击回车生成一个选项"
-            android:singleLine="true" />
+            android:hint="点击回车生成一个选项" />
 
         <GridView
             android:id="@+id/gridView1"
@@ -76,34 +75,33 @@
                 android:id="@+id/editText1"
                 style="@style/EditEnter"
                 android:layout_width="60dp"
-                android:layout_marginLeft="10dp"
-                android:gravity="bottom"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@id/textView1"
+                android:gravity="bottom"
+                android:inputType="number"
                 android:textColor="#fe448a" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="350dp" >
+            android:layout_marginTop="350dp"
+            android:gravity="center_horizontal" >
 
             <ImageView
                 android:id="@+id/button1"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/arrow2"
-                android:layout_marginRight="50dp" />
+                android:layout_marginRight="50dp"
+                android:src="@drawable/arrow2" />
 
             <ImageView
                 android:id="@+id/button2"
-                android:layout_toRightOf="@id/button1"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/button1"
                 android:src="@drawable/clean" />
-
         </RelativeLayout>
     </RelativeLayout>
 
