--- a/res/layout/activity_photo_detect.xml
+++ b/res/layout/activity_photo_detect.xml
@@ -15,6 +15,7 @@
 	            android:layout_height="wrap_content"
 	            android:layout_width="wrap_content"
 	            android:padding="10dp"
+	            android:onClick="onClick"
 	            />
 	        <TextView
 	            android:id="@+id/bar_title"
@@ -41,8 +42,8 @@
 
         <ImageView
             android:id="@+id/image2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"/>
         
