--- a/res/layout/activity_roll.xml
+++ b/res/layout/activity_roll.xml
@@ -12,6 +12,7 @@
 	            android:layout_height="wrap_content"
 	            android:layout_width="wrap_content"
 	            android:padding="10dp"
+	            android:onClick="onClick"
 	            />
 	        <TextView
 	            android:id="@+id/bar_title"
