fixed a single line bug.

--- a/res/layout/activity_text_detect.xml
+++ b/res/layout/activity_text_detect.xml
@@ -37,6 +37,7 @@
             style="@style/EditEnter"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:hint="点击回车生成一个选项" />
 
         <GridView
